# HW2

./: CMakeLists.txt
lib/: SDL2_test.lib  SDL2maind.lib
